--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -1,8 +1,8 @@
-name: CICD
+name: cicd-docker-ec2
 
 on:
   push:
-    branches: [cicd-docker-ec2]
+    branches: [main]
 
 jobs:
   build:
@@ -13,17 +13,17 @@ jobs:
       - name: Login to docker hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
       - name: Build docker image
-        run: docker build -t integrationninjas/nodejs-app .
+        run: docker build -t pearlicia/nodejs-app-cicd-docker-ec2 .
       - name: Publish image to docker hub
-        run: docker push integrationninjas/nodejs-app:latest
+        run: docker push pearlicia/nodejs-app-cicd-docker-ec2:latest
         
   deploy:
     needs: build
-    runs-on: [aws-ec2]
+    runs-on: [ip-172-31-34-59]
     steps:
       - name: Pull image from docker hub
-        run: docker pull integrationninjas/nodejs-app:latest
+        run: docker pull pearlicia/nodejs-app-cicd-docker-ec2:latest
       - name: Delete old container
-        run: docker rm -f nodejs-app-container
+        run: docker rm -f nodejs-app-cicd-docker-ec2-container
       - name: Run docker container
-        run: docker run -d -p 5000:5000 --name nodejs-app-container integrationninjas/nodejs-app
+        run: docker run -d -p 5000:5000 --name nodejs-app-cicd-docker-ec2-container pearlicia/nodejs-app-cicd-docker-ec2
