--- a/.github/workflows/cicd-workflow.yml
+++ b/.github/workflows/cicd-workflow.yml
@@ -6,24 +6,25 @@ on:
 
 jobs:
   build:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
-      - name: Login to docker hub
+      - name: Login to Docker Hub
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }} 
-      - name: Build docker image
+      - name: Build Docker image
         run: docker build -t pearlicia/nodejs-app-cicd-docker-ec2 .
-      - name: Publish image to docker hub
-        run: docker push pearlicia/nodejs-app-cicd-docker-ec2:latest
-        
+
   deploy:
     needs: build
-    runs-on: [ip-172-31-34-59]
+    runs-on: [aws-ec2]
     steps:
-      - name: Pull image from docker hub
+      - name: Pull image from Docker Hub
         run: docker pull pearlicia/nodejs-app-cicd-docker-ec2:latest
-      - name: Delete old container
-        run: docker rm -f nodejs-app-cicd-docker-ec2-container
-      - name: Run docker container
+      - name: Remove old container (if exists)
+        run: docker rm -f nodejs-app-cicd-docker-ec2-container || true
+      - name: Run Docker container
         run: docker run -d -p 5000:5000 --name nodejs-app-cicd-docker-ec2-container pearlicia/nodejs-app-cicd-docker-ec2
+
+  
+  
